--- a/layout.html
+++ b/layout.html
@@ -18,9 +18,9 @@
 		<div class="container-fluid">
 			<div id="dashboard_navbar">
 				<ul class="nav nav-tabs nav-justified">
-					<li class="active"><a href="#" class="btn btn-primary">Dashboard</a></li>
-					<li><a href="#" class="btn btn-primary">Guidance</a></li>
-					<li><a href="#" class="btn btn-primary">Study Abroad</a></li>
+					<li class="active"><a href="#" class="btn btn-primary btn-xs">Dashboard</a></li>
+					<li><a href="#" class="btn btn-primary btn-xs">Guidance</a></li>
+					<li><a href="#" class="btn btn-primary btn-xs">Study Abroad</a></li>
 				</ul>
 			</div>
 			<div class="well">
